# pybind11-vcpkg

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README  commands.sh  logs  vcpkg.json
python_modules/: class_example.py  lib_example.py  spleeter_wrapper.py
src/: .clangd  main.cpp
